@@ -72,9 +72,16 @@ public class WarningReader extends HeaderReader<Warning> {
         Warning result = new Warning();
 
         String code = readToken();
-        String agent = readRawValue();
+        skipSpaces();
+        String agent = readRawText();
+        skipSpaces();
         String text = readQuotedString();
-        String date = readQuotedString();
+        // The date is not mandatory
+        skipSpaces();
+        String date = null;
+        if (peek() != -1) {
+            date = readQuotedString();
+        }
 
         if ((code == null) || (agent == null) || (text == null)) {
             throw new IOException("Warning header malformed.");
@@ -83,7 +90,10 @@ public class WarningReader extends HeaderReader<Warning> {
         result.setStatus(Status.valueOf(Integer.parseInt(code)));
         result.setAgent(agent);
         result.setText(text);
-        result.setDate(DateUtils.parse(date));
+        if (date != null) {
+            result.setDate(DateUtils.parse(date));
+        }
+
         return result;
     }
 
