@@ -42,7 +42,8 @@ Changes log
        - Request with no entity are now detected at connector level when 
          non persistent connections are used without setting the 
          Content-Length header properly either. Reported by David Fogel.       
-         
+       - Fixed parsing of Warning header. Reported by John Logsdon.
+
 - 2.0.3 (2010-11-07)
     - Bugs fixed
        - Fixed Representation#availableSize computation issue when
